--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_name">Zotero</string>
     <string name="buttonInitOAuth">Initialize OAuth</string>
     <string name="applicationTitle">Zotero for Android</string>
+    <string name="buttonMakeRequest">Make Request</string>
 </resources>
