--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,25 +31,54 @@
     <string name="search_hint">Search items</string>
     <string name="choose_parent_collection">Choose parent collection</string>
     <string name="status">Status:</string>
-    	<!-- Button labels for dialogs -->
+    <!-- ItemActivity (item lists) -->
+    <string name="all_items">All items</string>
+    <string name="cant_open_item">Can\'t open %s</string>
+    <string name="item_type">Item type</string>
+    <string name="set_sort_order">Set sort order</string>
+    <!-- ItemDataActivity (item details) -->
+    <string name="edit_item_field">Edit %s</string>
+    <string name="item_delete_confirm">Delete this item?</string>
+    <string name="item_type_change">Change item type</string>
+    <!-- Button labels for dialogs -->
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
     <string name="view">View</string>
     <string name="view_online_warning">View this online?</string>
-    	<!-- Attachments -->
+    <!-- Attachments -->
     <string name="attachment_zfs_available">Available for download</string>
     <string name="attachment_zfs_local">Downloaded</string>
     <string name="attachment_unknown">Status unknown</string>
-    <string name="attachment_downloading">Downloading attachment for %s$1</string>
+    <string name="attachment_downloading">Downloading attachment for %s</string>
 	<string name="attachment_download_initiated">File download initiated.</string>
 	<string name="attachment_download_failed">File download may have failed; try again.</string>
-	<string name="attachment_intent_failed">No application available to open files of type %s$1.</string>
-		<!-- Syncing -->
+	<string name="attachment_intent_failed">No application available to open files of type %s.</string>
+	<!-- Tags -->
+	<string name="tags_for_item">Tags for %s</string>
+	<string name="tag_auto">Auto</string>
+	<string name="tag_user">User</string>
+	<string name="tag_edit">Edit tag</string>
+	<!-- Collections -->
+	<string name="collections">Collections</string>
+	<string name="collection_cant_open">Can\'t open %s</string>
+	<string name="collection_no_subcollections">No subcollections for collection. To view items in the collection, touch and hold the collection.</string>
+	<string name="collection_empty">Collection is empty, requesting update.</string>
+	<!-- Syncing -->
 	<string name="sync_log_in_first">Log in to sync</string>
 	<string name="sync_started">Started syncing...</string>
-        <!-- Zotero terms -->
+	<string name="sync_collection">Started syncing; refreshing collection list</string>
+	<!-- Settings -->
+	<string name="settings_basic">Basic</string>
+	<string name="settings_aggressive_syncing">Aggressive Syncing</string>
+	<string name="settings_aggressive_syncing_desc">Check to have Zandy attempt to keep all collections synced</string>
+	<string name="settings_user_id">User ID</string>
+	<string name="settings_user_id_desc">This is the numeric user ID for your account at Zotero.org</string>
+	<string name="settings_api_key">API Key</string>
+	<string name="settings_api_key_desc">This is the API key to access your account at Zotero.org</string>
+	<!-- Zotero terms -->
     <string name="note">Note</string>
-        <!-- JSON templates; don't need l10n -->
+
+    <!-- JSON templates; don't need l10n -->
     <string name="template_artwork">{"itemType":"artwork","title":"-_-_-","creators":[{"creatorType":"artist","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","artworkMedium":"-_-_-","artworkSize":"-_-_-","date":"-_-_-","language":"-_-_-","shortTitle":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
     <string name="template_audioRecording">{"itemType":"audioRecording","title":"-_-_-","creators":[{"creatorType":"performer","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","audioRecordingFormat":"-_-_-","seriesTitle":"-_-_-","volume":"-_-_-","numberOfVolumes":"-_-_-","place":"-_-_-","label":"-_-_-","date":"-_-_-","runningTime":"-_-_-","language":"-_-_-","ISBN":"-_-_-","shortTitle":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>    
     <string name="template_bill">{"itemType":"bill","title":"-_-_-","creators":[{"creatorType":"sponsor","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","billNumber":"-_-_-","code":"-_-_-","codeVolume":"-_-_-","section":"-_-_-","codePages":"-_-_-","legislativeBody":"-_-_-","session":"-_-_-","history":"-_-_-","date":"-_-_-","language":"-_-_-","url":"-_-_-","accessDate":"-_-_-","shortTitle":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>    
