--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="attachment_zfs_local">Downloaded</string>
     <string name="attachment_unknown">Status unknown</string>
     <string name="attachment_downloading">Downloading attachment for %s</string>
+    <string name="attachment_unzipping">Unzipping...</string>
 	<string name="attachment_download_initiated">File download initiated.</string>
 	<string name="attachment_download_failed">File download may have failed; try again.</string>
 	<string name="attachment_intent_failed">No application available to open files of type %s.</string>
