--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="menu_sync">Sync</string>
     <string name="menu_new">New</string>
     <string name="menu_delete">Delete</string>
+    <string name="menu_identifier">Add by identifier</string>
     <string name="menu_sort">Sort</string>
     <string name="menu_prefs">Settings</string>
     <string name="menu_search">Search</string>
