--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="attachment_unknown">Status unknown</string>
     <string name="attachment_downloading">Downloading attachment for %s</string>
     <string name="attachment_unzipping">Unzipping...</string>
+    <string name="attachment_no_download_url">No download URL for attachment. Try syncing again.</string>
 	<string name="attachment_download_initiated">File download initiated.</string>
 	<string name="attachment_download_failed">File download may have failed; try again.</string>
 	<string name="attachment_intent_failed">No application available to open files of type %s.</string>
