Comment out keys override in ZWebView. Fix attachment downloading. Reorganize note editing.
* ZWebView used to block all keys with intent to manually submit codes to JavaScript. AFAIK this entire approach is currently broken. Just make the activity responsive.
* Add more space to note by moving Edit command into menu
* Fix incorrect (?) regexp
* Fix saved from page pdf handling
* Open just downloaded attachments

--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -49,4 +49,5 @@
 	<string name="sync_started">Started syncing...</string>
         <!-- Zotero terms -->
     <string name="note">Note</string>
+    <string name="menu_edit">Edit</string>
 </resources>
