--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,95 +17,95 @@
 -->
 <resources>
     <string name="app_name">Zandy</string>
-    <string name="applicationTitle">Zandy: A Zotero Client for Android</string>
-    <string name="menu_sync">Sync</string>
-    <string name="menu_new">New</string>
-    <string name="menu_delete">Delete</string>
-    <string name="menu_identifier">Add by identifier</string>
-    <string name="menu_sort">Sort</string>
-    <string name="menu_prefs">Settings</string>
-    <string name="menu_search">Search</string>
-    <string name="view_items">View Items</string>
-    <string name="view_collections">View Collections</string>
-    <string name="log_in">Log in</string>
-    <string name="logged_in">Logged in</string>
-    <string name="search_hint">Search items</string>
-    <string name="choose_parent_collection">Choose parent collection</string>
+    <string name="applicationTitle">Zandy: un client Zotero pour Android</string>
+    <string name="menu_sync">Synchroniser</string>
+    <string name="menu_new">Nouveau</string>
+    <string name="menu_delete">Supprimer</string>
+    <string name="menu_identifier">Ajouter par identifiant</string>
+    <string name="menu_sort">classer</string>
+    <string name="menu_prefs">Préférences</string>
+    <string name="menu_search">Recherche</string>
+    <string name="view_items">Visualiser les objets</string>
+    <string name="view_collections">Visualiser les collections</string>
+    <string name="log_in">S'identifier</string>
+    <string name="logged_in">Identifié</string>
+    <string name="search_hint">Rechercher parmi les objets</string>
+    <string name="choose_parent_collection">Choisir la collection mère</string>
     <string name="status">Status:</string>
     <!-- ItemActivity (item lists) -->
-    <string name="all_items">All items</string>
-    <string name="cant_open_item">Can\'t open %s</string>
-    <string name="item_type">Item type</string>
-    <string name="set_sort_order">Set sort order</string>
-    <string name="search_results">Search results: %s</string>
+    <string name="all_items">Tous les objets</string>
+    <string name="cant_open_item">Impossible d'ouvrir %s</string>
+    <string name="item_type">Type d'objet</string>
+    <string name="set_sort_order">Choisir un ordre de tri</string>
+    <string name="search_results">Résultat de la recherche: %s</string>
     <!-- ItemDataActivity (item details) -->
-    <string name="edit_item_field">Edit %s</string>
-    <string name="item_delete_confirm">Delete this item?</string>
-    <string name="item_type_change">Change item type</string>
-    <string name="item_details">Item Details</string>
-    <string name="item_attachment_info_template">%1$d notes, %2$d attachments</string>
-    <string name="item_attachment_info_none">No attachments or notes.</string>
+    <string name="edit_item_field">Éditer %s</string>
+    <string name="item_delete_confirm">Supprimer cet objet?</string>
+    <string name="item_type_change">Changer le type de l'objet</string>
+    <string name="item_details">Détails de l'objet</string>
+    <string name="item_attachment_info_template">%1$d notes, %2$d attachements</string>
+    <string name="item_attachment_info_none">Aucun attachement ou note.</string>
     <string name="item_collection_count">%1$d collections</string>
     <!-- Button labels for dialogs -->
     <string name="ok">Ok</string>
-    <string name="cancel">Cancel</string>
-    <string name="view">View</string>
-    <string name="view_online_warning">View this online?</string>
+    <string name="cancel">Annuler</string>
+    <string name="view">Visualiser</string>
+    <string name="view_online_warning">Visualiser en ligne?</string>
     <!-- Attachments -->
-    <string name="attachment_zfs_available">Available for download</string>
-    <string name="attachment_zfs_local">Downloaded</string>
-    <string name="attachment_unknown">Status unknown</string>
-    <string name="attachment_downloading">Downloading attachment for %s</string>
-    <string name="attachment_unzipping">Unzipping...</string>
-    <string name="attachment_no_download_url">No download URL for attachment. Try syncing again.</string>
-	<string name="attachment_download_initiated">File download initiated.</string>
-	<string name="attachment_download_failed">File download may have failed; try again.</string>
-	<string name="attachment_intent_failed">No application available to open files of type %s.</string>
-	<string name="attachment_intent_failed_for_uri">No application available to open URI: %s</string>
-    <string name="attachment_delete_confirm">Delete this attachment?</string>
-    <string name="attachment_note_warning">Changes to notes on attachments cannot currently be synced, due to limitations in the Zotero API.</string>
-    <string name="attachments_for_item">Attachments for %s</string>
+    <string name="attachment_zfs_available">Disponible au téléchargement</string>
+    <string name="attachment_zfs_local">Téléchargé</string>
+    <string name="attachment_unknown">Statut inconnu</string>
+    <string name="attachment_downloading">En cours de téléchargement de la pièce jointe pour %s</string>
+    <string name="attachment_unzipping">Décompression...</string>
+    <string name="attachment_no_download_url">Pas d'URL de téléchargement pour cet attachement. Essayez de synchroniser à nouveau.</string>
+	<string name="attachment_download_initiated">Téléchargement débuté.</string>
+	<string name="attachment_download_failed">Le téléchargement a probablement échoué. Essayez à nouveau.</string>
+	<string name="attachment_intent_failed">Pas d'application pour ouvrir les objets de type %s.</string>
+	<string name="attachment_intent_failed_for_uri">Pas d'application pour ouvrir l'URI: %s</string>
+    <string name="attachment_delete_confirm">Supprimer cette pièce jointe?</string>
+    <string name="attachment_note_warning">Les changements aux notes des pièces jointes ne peuvent être directement synchronisées, en raison d'une limitation de l'API de Zotero.</string>
+    <string name="attachments_for_item">Pièces jointes pour %s</string>
 	<!-- Tags -->
-	<string name="tags_for_item">Tags for %s</string>
+	<string name="tags_for_item">Tags pour %s</string>
 	<string name="tag_auto">Auto</string>
-	<string name="tag_user">User</string>
-	<string name="tag_edit">Edit tag</string>
-	<string name="tag_view_confirm">View items for this tag?</string>
- 	<string name="tag_view">View</string>
+	<string name="tag_user">Utilisateur</string>
+	<string name="tag_edit">Éditer le tag</string>
+	<string name="tag_view_confirm">Voir les objets pour ce tag?</string>
+ 	<string name="tag_view">Visualiser</string>
  	<string name="tag_viewing_items">Tag: %s</string>
 	<!-- Collections -->
 	<string name="collections">Collections</string>
-	<string name="collections_for_item">Collections containing %s</string>
-	<string name="collection_cant_open">Can\'t open %s</string>
-	<string name="collection_no_subcollections">No subcollections for collection. To view items in the collection, touch and hold the collection.</string>
-	<string name="collection_empty">Collection is empty, requesting update.</string>
-	<string name="collection_membership_detail">Collection options</string>
-	<string name="collection_remove_item">Remove item</string>
+	<string name="collections_for_item">Collections contenant %s</string>
+	<string name="collection_cant_open">Impossible d'ouvrir %s</string>
+	<string name="collection_no_subcollections">Pas de sous-collection pour cette collection. Pour voir les objets de cette collection, appuyez sur la collection et maintenez la pression.</string>
+	<string name="collection_empty">La collection est vide - mise à jour requise.</string>
+	<string name="collection_membership_detail">Options de la colletcion</string>
+	<string name="collection_remove_item">Supprimer l'objet</string>
 	<!-- Syncing -->
-	<string name="sync_log_in_first">Log in to sync</string>
-	<string name="sync_started">Started syncing...</string>
-	<string name="sync_collection">Started syncing; refreshing collection list</string>
+	<string name="sync_log_in_first">Identifiez-vous pour la synchronisation</string>
+	<string name="sync_started">Synchronisation démarrée...</string>
+	<string name="sync_collection">Synchronisation démarrée; la liste des collection est en cours de rafraîchissement</string>
 	<!-- Settings -->
-	<string name="settings_basic">Basic</string>
-	<string name="settings_aggressive_syncing">Aggressive Syncing</string>
-	<string name="settings_aggressive_syncing_desc">Check to have Zandy attempt to keep all collections synced</string>
-	<string name="settings_user_id">User ID</string>
-	<string name="settings_user_id_desc">This is the numeric user ID for your account at Zotero.org</string>
-	<string name="settings_api_key">API Key</string>
-	<string name="settings_api_key_desc">This is the API key to access your account at Zotero.org</string>
+	<string name="settings_basic">Simple</string>
+	<string name="settings_aggressive_syncing">Synchronisation agressive</string>
+	<string name="settings_aggressive_syncing_desc">Cochez pour que Zandy tente de garder toutes les collections synchronisées</string>
+	<string name="settings_user_id">Identifiant numérique</string>
+	<string name="settings_user_id_desc">Ceci est l'identifiant numérique associé à votre compte Zotero.org</string>
+	<string name="settings_api_key">Clé API</string>
+	<string name="settings_api_key_desc">Cette clé API est nécessaire pour accéder à votre compte Zotero.org</string>
 	<string name="settings_webdav">WebDAV</string>
-	<string name="settings_webdav_enabled">Enable WebDAV</string>
-	<string name="settings_webdav_enabled_desc">Check to have Zandy look for attachments on a WebDAV host</string>
+	<string name="settings_webdav_enabled">Utiliser un accès WebDAV</string>
+	<string name="settings_webdav_enabled_desc">Cocher pour que Zandy cherche les pièces jointes sur un serveur WebDAV</string>
 	<string name="settings_webdav_path">Base URL</string>
-	<string name="settings_webdav_path_desc">Server and path for your WebDAV setup, like https://www.example.com/users/bobsmith/zotero</string>
-	<string name="settings_webdav_username">Username</string>
-	<string name="settings_webdav_username_desc">Username for WebDAV server. This is separate from your Zotero username.</string>
-	<string name="settings_webdav_password">Password</string>
-	<string name="settings_webdav_password_desc">Password for WebDAV server. This is separate from your Zotero password.</string>
+	<string name="settings_webdav_path_desc">Serveur et chermin pour les réglages WebDAV, par exemple: https://www.example.com/users/bobsmith/zotero</string>
+	<string name="settings_webdav_username">Identifiant</string>
+	<string name="settings_webdav_username_desc">Votre identifiant pour le serveur WebDAV. Il peut être différent de votre identifiant zotero.</string>
+	<string name="settings_webdav_password">Mot de passe</string>
+	<string name="settings_webdav_password_desc">Mot de passe pour accéder au serveur WebDAV. Il peut être différent de votre mot de passe Zotero.</string>
 	<!-- Zotero terms -->
     <string name="note">Note</string>
-    <string name="note_for_item">Note for %s</string>
-    <string name="note_edit">Edit note</string>
+    <string name="note_for_item">Note pour %s</string>
+    <string name="note_edit">Éditer la note</string>
 
     <!-- JSON templates; don't need l10n -->
     <string name="template_artwork">{"itemType":"artwork","title":"-_-_-","creators":[{"creatorType":"artist","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","artworkMedium":"-_-_-","artworkSize":"-_-_-","date":"-_-_-","language":"-_-_-","shortTitle":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
