--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -27,22 +27,22 @@
     <string name="menu_search">Recherche</string>
     <string name="view_items">Visualiser les objets</string>
     <string name="view_collections">Visualiser les collections</string>
-    <string name="log_in">S'identifier</string>
+    <string name="log_in">S\'identifier</string>
     <string name="logged_in">Identifié</string>
     <string name="search_hint">Rechercher parmi les objets</string>
     <string name="choose_parent_collection">Choisir la collection mère</string>
     <string name="status">Status:</string>
     <!-- ItemActivity (item lists) -->
     <string name="all_items">Tous les objets</string>
-    <string name="cant_open_item">Impossible d'ouvrir %s</string>
-    <string name="item_type">Type d'objet</string>
+    <string name="cant_open_item">Impossible d\'ouvrir %s</string>
+    <string name="item_type">Type d\'objet</string>
     <string name="set_sort_order">Choisir un ordre de tri</string>
     <string name="search_results">Résultat de la recherche: %s</string>
     <!-- ItemDataActivity (item details) -->
     <string name="edit_item_field">Éditer %s</string>
     <string name="item_delete_confirm">Supprimer cet objet?</string>
-    <string name="item_type_change">Changer le type de l'objet</string>
-    <string name="item_details">Détails de l'objet</string>
+    <string name="item_type_change">Changer le type de l\'objet</string>
+    <string name="item_details">Détails de l\'objet</string>
     <string name="item_attachment_info_template">%1$d notes, %2$d attachements</string>
     <string name="item_attachment_info_none">Aucun attachement ou note.</string>
     <string name="item_collection_count">%1$d collections</string>
@@ -57,13 +57,13 @@
     <string name="attachment_unknown">Statut inconnu</string>
     <string name="attachment_downloading">En cours de téléchargement de la pièce jointe pour %s</string>
     <string name="attachment_unzipping">Décompression...</string>
-    <string name="attachment_no_download_url">Pas d'URL de téléchargement pour cet attachement. Essayez de synchroniser à nouveau.</string>
+    <string name="attachment_no_download_url">Pas d\'URL de téléchargement pour cet attachement. Essayez de synchroniser à nouveau.</string>
 	<string name="attachment_download_initiated">Téléchargement débuté.</string>
 	<string name="attachment_download_failed">Le téléchargement a probablement échoué. Essayez à nouveau.</string>
-	<string name="attachment_intent_failed">Pas d'application pour ouvrir les objets de type %s.</string>
-	<string name="attachment_intent_failed_for_uri">Pas d'application pour ouvrir l'URI: %s</string>
+	<string name="attachment_intent_failed">Pas d\'application pour ouvrir les objets de type %s.</string>
+	<string name="attachment_intent_failed_for_uri">Pas d\'application pour ouvrir l\'URI: %s</string>
     <string name="attachment_delete_confirm">Supprimer cette pièce jointe?</string>
-    <string name="attachment_note_warning">Les changements aux notes des pièces jointes ne peuvent être directement synchronisées, en raison d'une limitation de l'API de Zotero.</string>
+    <string name="attachment_note_warning">Les changements aux notes des pièces jointes ne peuvent être directement synchronisées, en raison d\'une limitation de l\'API de Zotero.</string>
     <string name="attachments_for_item">Pièces jointes pour %s</string>
 	<!-- Tags -->
 	<string name="tags_for_item">Tags pour %s</string>
@@ -76,11 +76,11 @@
 	<!-- Collections -->
 	<string name="collections">Collections</string>
 	<string name="collections_for_item">Collections contenant %s</string>
-	<string name="collection_cant_open">Impossible d'ouvrir %s</string>
+	<string name="collection_cant_open">Impossible d\'ouvrir %s</string>
 	<string name="collection_no_subcollections">Pas de sous-collection pour cette collection. Pour voir les objets de cette collection, appuyez sur la collection et maintenez la pression.</string>
 	<string name="collection_empty">La collection est vide - mise à jour requise.</string>
 	<string name="collection_membership_detail">Options de la colletcion</string>
-	<string name="collection_remove_item">Supprimer l'objet</string>
+	<string name="collection_remove_item">Supprimer l\'objet</string>
 	<!-- Syncing -->
 	<string name="sync_log_in_first">Identifiez-vous pour la synchronisation</string>
 	<string name="sync_started">Synchronisation démarrée...</string>
@@ -90,7 +90,7 @@
 	<string name="settings_aggressive_syncing">Synchronisation agressive</string>
 	<string name="settings_aggressive_syncing_desc">Cochez pour que Zandy tente de garder toutes les collections synchronisées</string>
 	<string name="settings_user_id">Identifiant numérique</string>
-	<string name="settings_user_id_desc">Ceci est l'identifiant numérique associé à votre compte Zotero.org</string>
+	<string name="settings_user_id_desc">Ceci est l\'identifiant numérique associé à votre compte Zotero.org</string>
 	<string name="settings_api_key">Clé API</string>
 	<string name="settings_api_key_desc">Cette clé API est nécessaire pour accéder à votre compte Zotero.org</string>
 	<string name="settings_webdav">WebDAV</string>
