First logic for callbacks/handler approach to requests.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -86,6 +86,7 @@
 	<string name="sync_log_in_first">Log in to sync</string>
 	<string name="sync_started">Started syncing&#8230;</string>
 	<string name="sync_collection">Started syncing; refreshing collection list</string>
+	<string name="sync_error">Synchronization error</string>
 	<!-- Settings -->
 	<string name="settings_basic">Basic</string>
 	<string name="settings_aggressive_syncing">Aggressive Syncing</string>
