--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Requirements:
 Android 2.2 or later, although there are plans to support earlier versions of Android.
 
 Support:
-See the Zandy User Guide (http://www.gimranov.com/avram/w/zandy-user-guide) for basic documentation. Feature requests and bug reports are highly encouraged-- please post to the issue tracker on GitHub, or post comments to the user guide. Also feel free to write to zandy@gimranov.com with questions.
+See the Zandy User Guide (http://www.gimranov.com/avram/w/zandy-user-guide) for basic documentation. Feature requests and bug reports are highly encouraged-- please post to the issue tracker on GitHub or to the Zandy user forum (http://www.gimranov.com/forum). Also feel free to write to zandy@gimranov.com with questions.
 
 License:
 GNU Affero General Public License, Version 3 or later.
